--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>OmasKitschen</h1>
 <br/>
-<p>Site in construction // Seite in Bearbeitung</p>
+<p>Diese Website wurde für ein Schulprojekt erstellt.</p>
